<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#000000"
    tools:layout_editor_absoluteX="-16dp"
    tools:layout_editor_absoluteY="-7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="9dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/rounded_corner_view"
            app:layout_constraintBottom_toTopOf="@+id/textView20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/title"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <EditText
            android:id="@+id/textView14"
            android:layout_width="60dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/input_corner"
            android:hint="@string/hint"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="@color/cardview_dark_background"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="2dp"
            android:text="@string/celsiusC"
            android:textColor="#00DEFF"
            android:textSize="9dp"
            android:background="@drawable/button_style"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="6dp"
            android:text="@string/fahrenheitF"
            android:textColor="#00DEFF"
            android:background="@drawable/button_style"
            android:textSize="9dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button7" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="173dp"
            android:layout_height="61dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="11dp"
            android:background="@drawable/rounded_corner_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/converted"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toTopOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="46dp"
            android:layout_height="20dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/input_corner"
            android:hint="@string/result"
            android:textColor="@color/cardview_dark_background"
            android:textColorHint="#515151"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="31dp"
            android:layout_height="17dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="11dp"
            android:text="@string/fahrenheit"
            android:textColor="#00DEFF"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>
